--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -12,10 +12,18 @@
 <meta property="article:publisher" content="https://www.facebook.com/{{site.social.facebook_user}}">
 
 {% assign basepath = site.url | append: site.baseurl %}
+{% assign coverImagePath = basepath | append: "/assets/covers/cover.jpg" %}
+
 {% if page.cover %}
   {% assign coverImagePath = basepath | append: page.cover %}
 {% else %}
-  {% assign coverImagePath = basepath | append: "/assets/covers/cover.jpg" %}
+  {% assign postSlug = page.url | split: "/" | last %}
+  {% for file in site.static_files %}
+    {% if file.path contains postSlug %}
+      {% assign coverImagePath = basepath | append: file.path %}
+      {% break %}
+    {% endif %}
+  {% endfor %}
 {% endif %}
 
 <meta name="twitter:image" content="{{ coverImagePath }}">
