fix list font and list image spacing

--- a/_layouts/list.html
+++ b/_layouts/list.html
@@ -19,7 +19,7 @@
               </div>
               {% for filter in page.filters %}
                 <div class="selector-button {{ filter }}">
-                  | <span class="filter-button-text">{{ filter | replace: 'filter-', '' }}</span>
+                  <span class="filter-button-text">{{ filter | replace: 'filter-', '' }}</span>
                 </div>
               {% endfor %}
             </div>
