--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -5,11 +5,13 @@
 
 <div id="navbar">
   <div id="hide-menu" class="menu-icon" onclick="hideMenu()">✖</div>
+  <a class="menu-item menu-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
   {% include navbar-content.html %}
 </div>
 
 <div id="navbar-desktop">
   <div id="hide-menu" class="menu-icon" onclick="hideMenu()">✖</div>
+  <a class="menu-item menu-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
   {% include navbar-content.html %}
 </div>
 
