--- a/_sass/fonts.scss
+++ b/_sass/fonts.scss
@@ -101,6 +101,12 @@ a, .email-icon {
       font-size: $MENU-ITEM-SIZE;
     }
   }
+
+  .menu-year {
+    &:hover {
+      color: $MENU-TEXT-COLOR;
+    }
+  }
 }
 
 .menu-title {
