--- a/_includes/swipebox.html
+++ b/_includes/swipebox.html
@@ -11,7 +11,7 @@
 <script type="text/javascript">
   (function($) {
     $( '.swipebox-{{ include.prefix }}' ).swipebox({
-      hideBarsDelay : 3000000
+      hideBarsDelay : 5000
     });
   })(jQuery);
 </script>
