--- a/_includes/navbar-content.html
+++ b/_includes/navbar-content.html
@@ -10,8 +10,8 @@
 
 {% assign menuCategories = "collaboration,project" | split: ',' %}
 
-{% if page.menu-categories %}
-  {% assign menuCategories = page.menu-categories %}
+{% if page.category %}
+  {% assign menuCategories = page.category | split: ',' %}
 {% endif %}
 
 {% assign currentYear = "" %}
@@ -29,9 +29,13 @@
         <a class="menu-item menu-item-post" href="{{site.baseurl}}/collaborations/">
           <i class="fa fa-heart" aria-hidden="true"></i>
         </a>
-      {% else %}
+      {% elsif post.category == 'project' %}
         <a class="menu-item menu-item-post" href="{{site.baseurl}}/projects/">
           <i class="fa fa-hashtag" aria-hidden="true"></i>
+        </a>
+      {% else %}
+        <a class="menu-item menu-item-post" href="{{site.baseurl}}/projects/">
+          <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
         </a>
       {% endif %}
 
