--- a/css/main.scss
+++ b/css/main.scss
@@ -181,7 +181,7 @@ body {
     display: block;
     margin: 0 auto;
     max-width: 100%;
-    /*max-height: 78vh;*/
+    max-height: 78vh;
     border-radius: 5px;
   }
 
