adds CSP header

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,7 @@
 <meta name="keywords" content="art, arte, portfolio">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' data: www.google-analytics.com; media-src 'self'; frame-src player.vimeo.com www.youtube.com; script-src 'self' 'unsafe-inline' ajax.googleapis.com www.google-analytics.com; font-src 'self' data: maxcdn.bootstrapcdn.com fonts.googleapis.com fonts.gstatic.com; style-src 'self' 'unsafe-inline' maxcdn.bootstrapcdn.com fonts.googleapis.com">
 
 <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
 <link rel="stylesheet" href="{{ site.baseurl }}/css/fontello.css">
@@ -12,8 +13,5 @@
 <link rel="shortcut icon" type="image/x-icon" href="{{ site.baseurl }}/assets/favicons/favicon.ico">
 
 <link rel="stylesheet" href="{{ site.baseurl }}/css/swipebox.min.css">
-<script src="https://code.jquery.com/jquery-2.2.4.min.js"
-        integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
-        crossorigin="anonymous">
-</script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script src="{{ site.baseurl }}/js/jquery.swipebox.min.js"></script>
