--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,8 @@
 <link rel="shortcut icon" type="image/x-icon" href="{{ site.baseurl }}/assets/favicons/favicon.ico">
 
 <link rel="stylesheet" href="{{ site.baseurl }}/css/swipebox.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"
+        integrity="sha384-rY/jv8mMhqDabXSo+UCggqKtdmBfd3qC2/KvyTDNQ6PcUJXaxK1tMepoQda4g5vB"
+        crossorigin="anonymous"></script>
 <script src="{{ site.baseurl }}/js/jquery.swipebox.min.js"></script>
 <script src="{{ site.baseurl }}/js/analytics.js"></script>
