--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,16 +1,16 @@
 <div class="navbar-mobile">
-  <span class="menu-icon show-menu-icon" onclick="showMenu()">&#9776;</span>
+  <span class="menu-icon show-menu-icon">&#9776;</span>
   <a class="menu-item menu-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
 </div>
 
 <div id="navbar">
-  <div class="menu-icon hide-menu-icon" onclick="hideMenu()">✖</div>
+  <div class="menu-icon hide-menu-icon">✖</div>
   <a class="menu-item menu-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
   {% include navbar-content.html %}
 </div>
 
 <div id="navbar-desktop">
-  <div class="menu-icon hide-menu-icon" onclick="hideMenu()">✖</div>
+  <div class="menu-icon hide-menu-icon">✖</div>
   <a class="menu-item menu-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
   {% include navbar-content.html %}
 </div>
