--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
 <meta name="keywords" content="art, arte, portfolio">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="Content-Security-Policy" content="default-src 'none'; img-src 'self' data: www.google-analytics.com; media-src 'self'; frame-src player.vimeo.com www.youtube.com; frame-ancestors 'self'; script-src 'self' ajax.googleapis.com www.google-analytics.com; font-src 'self' data: maxcdn.bootstrapcdn.com fonts.googleapis.com fonts.gstatic.com; style-src 'self' 'unsafe-inline' maxcdn.bootstrapcdn.com fonts.googleapis.com; base-uri 'self'; form-action 'self';">
+<meta http-equiv="Content-Security-Policy" content="default-src 'none'; img-src 'self' data:; media-src 'self'; frame-src player.vimeo.com www.youtube.com; frame-ancestors 'self'; script-src 'self' ajax.googleapis.com www.google-analytics.com; font-src 'self' data: maxcdn.bootstrapcdn.com fonts.googleapis.com fonts.gstatic.com; style-src 'self' 'unsafe-inline' maxcdn.bootstrapcdn.com fonts.googleapis.com; base-uri 'self'; form-action 'self';">
 
 <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
 <link rel="stylesheet" href="{{ site.baseurl }}/css/fontello.css">
