--- a/_sass/fonts.scss
+++ b/_sass/fonts.scss
@@ -143,7 +143,7 @@ a, .email-icon {
   }
 }
 
-.social-icon a, .social-icon .email-icon {
+.fu-icon a, .fu-icon .email-icon {
   font-size: 1.9rem;
   @include media-query(DESKTOP) {
     font-size: 2.4rem;
