--- a/_includes/navbar-content.html
+++ b/_includes/navbar-content.html
@@ -15,6 +15,10 @@
 
 {% assign menuCategories = "collaboration,project,astrovandalistas" | split: ',' %}
 
+{% if page.category %}
+  {% assign menuCategories = page.category | split: ',' %}
+{% endif %}
+
 {% assign currentYear = "" %}
 
 {% for post in site.posts %}
