--- a/_layouts/list.html
+++ b/_layouts/list.html
@@ -10,23 +10,11 @@
       <div class="main-div">
         <div class="post">
           <div class="post-title">{{ page.title }}</div>
-          {% if page.filters %}
-            <div class="filter-container">
-              <div class="selector-button filter-all">
-                <span class="filter-button-text filter-active">all</span>
-              </div>
-              {% for filter in page.filters %}
-                <div class="selector-button {{ filter }}">
-                  <span class="filter-button-text">{{ filter | replace: 'filter-', '' }}</span>
-                </div>
-              {% endfor %}
-            </div>
-          {% endif %}
           <div class="list-container">
             {% for post in site.posts %}
               {% assign pagedescription = page.description | downcase %}
               {% if pagedescription contains post.category %}
-                <div class="list-item {{ post.filters }}">
+                <div class="list-item">
                   <a href="{{ post.url }}">
                     {% assign postSlug = post.url | split: "/" | last %}
                     {% for file in site.static_files %}
@@ -46,5 +34,4 @@
       </div>
     </div>
   </body>
-  <script defer type="text/javascript" src="/js/project-filter.js"></script>
 </html>
