--- a/css/main.scss
+++ b/css/main.scss
@@ -184,15 +184,12 @@ body {
 
   .quote {
     text-align: right;
-    margin-bottom: 40px;
+    margin-bottom: 2vw;
     font-style: italic;
   }
   .quote-author {
-    font-style: normal;
     font-weight: bold;
-  }
-  .quote-author::before {
-    content: "— ";
+    padding-top: 0.8vw;
   }
 
   .img-mp3-container {
