--- a/_sass/constants.scss
+++ b/_sass/constants.scss
@@ -1,5 +1,5 @@
-$BACKGROUND: rgba(255,255,255,1);
-$TEXT-BACKGROUND: rgba(255,255,255,1);
+$BACKGROUND: #EFE2BA;
+$TEXT-BACKGROUND: $BACKGROUND;
 
 $TEXT-BASE: rgba(0,0,0,1);
 $TITLE-COLOR: lighten($TEXT-BASE, 10%);
@@ -9,9 +9,14 @@ $LINK-COLOR: $TITLE-COLOR;
 $LINK-COLOR-VISITED: $LINK-COLOR;
 $LINK-COLOR-HOVER: lighten($LINK-COLOR, 50%);
 
+$LINK-COLOR-POST: #FF1493;
+$LINK-COLOR-POST-VISITED: $LINK-COLOR-POST;
+$LINK-COLOR-POST-HOVER: #FF69B4;
+
 $MENU-BACKGROUND-COLOR: rgba(255,255,255,1);
+$MENU-BACKGROUND-COLOR: linear-gradient(to right, darken($BACKGROUND, 15%), $BACKGROUND);
 $MENU-TEXT-COLOR: rgba(40,40,40,1);
-$MENU-TEXT-HOVER-COLOR: lighten($MENU-TEXT-COLOR, 40%);
+$MENU-TEXT-HOVER-COLOR: #FF1493;
 
 $VERTICAL-SECTION-SPACING: 40px;
 $HORIZONTAL-ITEM-SPACING: 25px;
