fix project list width

--- a/_sass/fonts.scss
+++ b/_sass/fonts.scss
@@ -152,6 +152,12 @@ a, .email-icon {
 }
 
 .post {
+  text-align: justify;
+  line-height: 1.333;
+  @include media-query(DESKTOP) {
+    text-align: left;
+  }
+
   .post-title {
     font: bold $TITLE-SIZE-MOBILE $FAMILY-SANS;
     color: $TITLE-COLOR;
