new background color

--- a/_sass/constants.scss
+++ b/_sass/constants.scss
@@ -1,4 +1,4 @@
-$BACKGROUND: #EFE2BA;
+$BACKGROUND: lighten(goldenrod, 40%);
 $TEXT-BACKGROUND: linear-gradient(to left, darken($BACKGROUND, 15%), $BACKGROUND);
 
 $TRANSPARENT: rgba(0,0,0,0);
