makes menu the same on all pages independent on type of project being shown

--- a/_includes/navbar-content.html
+++ b/_includes/navbar-content.html
@@ -14,8 +14,9 @@
 </div>
 
 {% assign menuCategories = "collaboration,project,astrovandalistas" | split: ',' %}
+{% assign enableMenuCategories = false %}
 
-{% if page.category %}
+{% if enableMenuCategories and page.category %}
   {% assign menuCategories = page.category | split: ',' %}
 {% endif %}
 
