reverts back to b&w

--- a/_sass/constants.scss
+++ b/_sass/constants.scss
@@ -1,11 +1,13 @@
 $BACKGROUND: lighten(goldenrod, 40%);
+$BACKGROUND: rgba(255, 255, 255, 1);
 $TEXT-BACKGROUND: linear-gradient(to left, darken($BACKGROUND, 15%), $BACKGROUND);
+$TEXT-BACKGROUND: $BACKGROUND;
 
 $TRANSPARENT: rgba(0,0,0,0);
 
 $TEXT-BASE: rgba(0,0,0,1);
-$TITLE-COLOR: lighten($TEXT-BASE, 10%);
-$TEXT-COLOR: lighten($TEXT-BASE, 20%);
+$TITLE-COLOR: lighten($TEXT-BASE, 20%);
+$TEXT-COLOR: $TITLE-COLOR;
 
 $LINK-COLOR: $TITLE-COLOR;
 $LINK-COLOR-VISITED: $LINK-COLOR;
@@ -17,7 +19,7 @@ $LINK-COLOR-POST-HOVER: #FF69B4;
 
 $MENU-BACKGROUND-COLOR: rgba(255,255,255,1);
 $MENU-BACKGROUND-COLOR: linear-gradient(to right, darken($BACKGROUND, 15%), $BACKGROUND);
-$MENU-TEXT-COLOR: rgba(40,40,40,1);
+$MENU-TEXT-COLOR: $LINK-COLOR;
 $MENU-TEXT-HOVER-COLOR: #FF1493;
 
 $VERTICAL-SECTION-SPACING: 40px;
