fix algotype algo list

--- a/_sass/fonts.scss
+++ b/_sass/fonts.scss
@@ -141,6 +141,10 @@ a, .email-icon {
     text-transform: uppercase;
     text-align: center;
   }
+
+  .code-list {
+    font-family: monospace;
+  }
 }
 
 .fu-icon a, .fu-icon .email-icon {
