--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,10 @@
 <title>{{ page.title }}</title>
 
-<meta name="description" content="{{page.title}}: {{page.description}}">
-<meta name="keywords" content="art, arte, portfolio">
+{% assign meta_description = page.content | strip_html | truncatewords: 25 %}
+
+<meta name="title" content="{{ page.title }}">
+<meta name="description" content="{{ meta_description }}">
+
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Security-Policy" content="default-src 'none'; img-src 'self' data:; media-src 'self'; frame-src player.vimeo.com www.youtube.com; frame-ancestors 'self'; script-src 'self' ajax.googleapis.com; font-src 'self' data: maxcdn.bootstrapcdn.com fonts.googleapis.com fonts.gstatic.com; style-src 'self' 'unsafe-inline' maxcdn.bootstrapcdn.com fonts.googleapis.com; base-uri 'self'; form-action 'self';">
