--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,6 @@
 <title>{{ page.title }}</title>
 
-{% assign meta_description = page.content | strip_html | truncatewords: 25 %}
+{% assign meta_description = page.content | strip_html | strip_newlines | truncatewords: 25 %}
 
 <meta name="title" content="{{ page.title }}">
 <meta name="description" content="{{ meta_description }}">
