change home video

--- a/_includes/home-content.html
+++ b/_includes/home-content.html
@@ -1,4 +1,18 @@
-{% include vimeo.html id="66541476" %}
+<!-- {% include vimeo.html id="66541476" %} -->
+<a href="{{ site.baseurl }}/projects">
+  <div class="video-wrapper video-wrapper-16x9">
+    <video playsinline autoplay muted loop class="home-video">
+      <source src="{{ site.baseurl }}/assets/projects/algotypes-wifi/algotypes.webm"
+              type="video/webm">
+
+      <source src="{{ site.baseurl }}/assets/projects/algotypes-wifi/algotypes.mp4"
+              type="video/mp4">
+
+      <div class="home-image-banner"
+        style="background-image: url('{{ site.baseurl }}/assets/projects/algotypes-wifi/algotypes-wifi_00.jpg')"></div>
+    </video>
+  </div>
+</a>
 
 {% for link in site.data['home-links'] %}
   <a class="home-link" href="{{ link.url }}" target="_blank">{{ link.title }}</a>
