--- a/_includes/post-content.html
+++ b/_includes/post-content.html
@@ -1,4 +1,4 @@
-<div class="post-title">{{ page.title }}</div>
+<div class="post-title">{{ page.title }} ({{ page.date | date: "%Y" }})</div>
 
 {{ content }}
 
