--- a/_layouts/list.html
+++ b/_layouts/list.html
@@ -9,9 +9,8 @@
       {% include navbar.html %}
       <div class="main-div">
         <div class="post">
-          <div class="post-title">{{ page.title }}</div>
           <div class="list-container">
-            {% assign list_category = page.title | downcase %}
+            {% assign list_category = page.category | downcase %}
             {% if list_category contains 'projects' %}
               {% assign list_category = list_category | append: ' astrovandalistas' %}
             {% endif %}
