--- a/_includes/navbar-content.html
+++ b/_includes/navbar-content.html
@@ -1,63 +1,21 @@
 <div class="menu-item-post-container">
-  <a class="menu-item menu-item-post" href="{{site.baseurl}}/projects/">
-    <i class="fa fa-hashtag" aria-hidden="true"></i>
+  <a class="menu-item menu-item-post" href="{{site.baseurl}}/">
+    Projects
   </a>
-
-  <a class="menu-item menu-item-post" href="{{site.baseurl}}/astrovandalistas/">
-    <i class="fa fa-asterisk" aria-hidden="true"></i>
-  </a>
-
-  <a class="menu-item menu-item-post" href="{{site.baseurl}}/collaborations/">
-    <i class="fa fa-heart" aria-hidden="true"></i>
+  <br>
+  <a class="menu-item menu-item-post" href="{{site.baseurl}}/about/">
+    About
   </a>
 
 </div>
 
-{% assign menuCategories = "collaboration,project,astrovandalistas" | split: ',' %}
-{% assign enableMenuCategories = true %}
+<!-- {% assign menuCategories = "project,astrovandalistas" | split: ',' %}
+{% assign incPosts = site.posts | where_exp:"item", "menuCategories contains item.category" %}
 
-{% if enableMenuCategories and page.category %}
-  {% assign menuCategories = page.category | replace:'draft','project' | split: ',' %}
-{% endif %}
-
-{% assign currentYear = "" %}
-
-{% for post in site.posts %}
-  {% assign isAstroProject = 'false' %}
-  {% if post.category contains 'astrovandalistas' and menuCategories contains 'project' %}
-    {% assign isAstroProject = 'true' %}
-  {% endif %}
-
-  {% if menuCategories contains post.category or isAstroProject == 'true' %}
-
-    {% assign postYear = post.date | date: "%Y" %}
-    {% if postYear != currentYear %}
-      <div class="menu-item menu-year">{{ postYear }}</div>
-      {% assign currentYear = postYear %}
-    {% endif %}
-
+{% for post in incPosts %}
     <div class="menu-item-post-container">
-      {% if post.category contains 'collaboration' %}
-        <a class="menu-item menu-item-post" href="{{site.baseurl}}/collaborations/">
-          <i class="fa fa-heart" aria-hidden="true"></i>
-        </a>
-      {% elsif post.category contains 'project' %}
-        <a class="menu-item menu-item-post" href="{{site.baseurl}}/projects/">
-          <i class="fa fa-hashtag" aria-hidden="true"></i>
-        </a>
-      {% elsif post.category contains 'astrovandalistas' %}
-        <a class="menu-item menu-item-post" href="{{site.baseurl}}/astrovandalistas/">
-          <i class="fa fa-asterisk" aria-hidden="true"></i>
-        </a>
-      {% else %}
-        <a class="menu-item menu-item-post" href="{{site.baseurl}}/projects/">
-          <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
-        </a>
-      {% endif %}
-
       <a class="menu-item menu-item-post" href="{{site.baseurl}}{{ post.url }}">
         {{ post.title }}
       </a>
     </div>
-  {% endif %}
-{% endfor %}
+{% endfor %} -->
