--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -3,11 +3,13 @@
     {{ site.title }}
   </a>
 
-  <a class="menu-item" href="{{site.baseurl}}/">
-    Projects
-  </a>
+  <div class="menu-items-container">
+    <a class="menu-item" href="{{site.baseurl}}/">
+      Projects
+    </a>
 
-  <a class="menu-item" href="{{site.baseurl}}/about/">
-    About
-  </a>
+    <a class="menu-item" href="{{site.baseurl}}/about/">
+      About
+    </a>
+  </div>
 </div>
