--- a/css/main.scss
+++ b/css/main.scss
@@ -11,7 +11,6 @@ body {
   flex-direction: column;
 
   @include media-query(DESKTOP) {
-    -webkit-flex-direction: row;
     flex-direction: row;
   }
 
@@ -21,12 +20,19 @@ body {
 }
 
 .menu {
-  left: 0;
-  display: block;
-  max-width: $MENU-WIDTH;
-  min-width: $MENU-WIDTH;
-  padding: $HORIZONTAL-ITEM-SPACING;
-  transition: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+  width: 100%;
+  padding: 12px 20px;
+  box-sizing: border-box;
+
+  .menu-items-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
 
   a {
     display: block;
@@ -44,28 +50,25 @@ body {
   }
 
   a.menu-item {
-    margin: $LIST-SPACING/2 0;
     font-size: $MENU-ITEM-SIZE;
   }
 
+  a.menu-item + a.menu-item {
+    margin-left: 12px;
+  }
+
   a.menu-title {
-    margin-bottom: 4 * $MENU-ITEM-SPACING;
     font-size: $MENU-TITLE-SIZE;
   }
 }
 
 .main-div-container {
   width: 100%;
-  min-height: 100vh;
-  padding: 0;
 
   background-color: $TEXT-BACKGROUND;
   background: $TEXT-BACKGROUND;
 
   @include media-query(DESKTOP) {
-    display: flex;
-    flex-direction: row;
-
     background-color: $TRANSPARENT;
     background: $TRANSPARENT;
   }
@@ -73,20 +76,13 @@ body {
 
 .main-div {
   display: block;
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 
   width: 100%;
-
-  margin: 0 0;
-  padding: 3 * $RESPONSIVE-SPACING 1.5 * $RESPONSIVE-SPACING;
+  margin: 0;
 
   background-color: $TEXT-BACKGROUND;
   background: $TEXT-BACKGROUND;
-
-  @include media-query(DESKTOP) {
-    padding: $RESPONSIVE-SPACING 1.5 * $RESPONSIVE-SPACING;
-  }
 }
 
 .post {
@@ -95,11 +91,11 @@ body {
   width: 100%;
   box-sizing: border-box;
 
-  padding: 14px;
   margin: 0 auto;
+  padding: 0;
 
   @include media-query(DESKTOP) {
-    padding: $RESPONSIVE-SPACING 8%;
+    max-width: 800px;
   }
 
   img {
@@ -137,6 +133,16 @@ body {
   }
   h3, h2 {
     margin-bottom: 8px;
+  }
+
+  p {
+    text-align: justify;
+    padding: 0 16px;
+
+    @include media-query(DESKTOP) {
+      text-align: left;
+      padding: 0;
+    }
   }
 }
 
