updates how projs are filtered when lists are generated

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -4,8 +4,8 @@
   </a>
 
   <div class="menu-items-container">
-    <a class="menu-item" href="{{site.baseurl}}/">
-      Projects
+    <a class="menu-item" href="{{site.baseurl}}/works/">
+      Works
     </a>
 
     <a class="menu-item" href="{{site.baseurl}}/about/">
